src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  /* #region  /**=========== Primary Color =========== */
  --tw-color-primary-50: 239 249 255;
  --tw-color-primary-100: 222 242 255;
  --tw-color-primary-200: 182 232 255;
  --tw-color-primary-300: 117 216 255;
  --tw-color-primary-400: 44 196 255;
  --tw-color-primary-500: 0 159 227;
  --tw-color-primary-600: 0 138 212;
  --tw-color-primary-700: 0 110 171;
  --tw-color-primary-800: 0 93 141;
  --tw-color-primary-900: 6 77 116;
  --tw-color-primary-950: 4 49 77;
  --color-primary-50: rgb(var(--tw-color-primary-50)); /* #f0fdfa */
  --color-primary-100: rgb(var(--tw-color-primary-100)); /* #ccfbf1 */
  --color-primary-200: rgb(var(--tw-color-primary-200)); /* #99f6e4 */
  --color-primary-300: rgb(var(--tw-color-primary-300)); /* #5eead4 */
  --color-primary-400: rgb(var(--tw-color-primary-400)); /* #2dd4bf */
  --color-primary-500: rgb(var(--tw-color-primary-500)); /* #14b8a6 */
  --color-primary-600: rgb(var(--tw-color-primary-600)); /* #0d9488 */
  --color-primary-700: rgb(var(--tw-color-primary-700)); /* #0f766e */
  --color-primary-800: rgb(var(--tw-color-primary-800)); /* #115e59 */
  --color-primary-900: rgb(var(--tw-color-primary-900)); /* #134e4a */
  --color-primary-950: rgb(var(--tw-color-primary-950)); /* #042f2e */
  /* #endregion  /**======== Primary Color =========== */
}

@layer base {
  :root {
    --navigation-height: 110px;
  }

  @font-face {
    font-family: 'Manrope';
    font-style: normal;
    font-weight: 100 900;
    font-display: optional;
    src: url('/fonts/manrope-var-wght.woff2') format('woff2');
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
      U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
      U+2215, U+FEFF, U+FFFD;
  }

  .cursor-newtab {
    cursor:
      url('/images/new-tab.png') 10 10,
      pointer;
  }

  .swiper {
    overflow: visible !important;
  }

  .swiper.swiper-initialized .swiper-scrollbar.swiper-scrollbar-horizontal {
    @apply absolute bottom-[-20px] left-0 z-50 h-[2px] w-full rounded-none;
  }

  .swiper.swiper-initialized
    .swiper-scrollbar.swiper-scrollbar-horizontal
    .swiper-scrollbar-drag {
    @apply rounded-none bg-dark;
  }

  .news__content p,
  .privacy__content p,
  .imprint__content p {
    @apply mb-8;
  }

  .privacy__content,
  .imprint__content,
  .news__content {
    & p,
    & ul {
      @apply mb-8;
    }
    & p:last-child,
    & ul:last-child {
      @apply mb-0;
    }
    & ul {
      list-style-type: disc;
      list-style-position: inside;
    }
    & ol {
      list-style-type: decimal;
      list-style-position: outside;
    }
    & ul & ul,
    & ol & ul {
      list-style-type: circle;
      list-style-position: outside;
      margin-left: 15px;
    }
    & ol & ol,
    & ul & ol {
      list-style-type: lower-latin;
      list-style-position: outside;
      padding-left: 15px;
    }
    & li {
      padding: 0 0 10px 15px;
    }
  }

  .news__content a {
    @apply text-primary-600;
  }

  /* #region  /**=========== Typography =========== */
  h1,
  .h1 {
    @apply font-primary text-3xl font-medium md:text-5xl;
  }

  h2,
  .h2 {
    @apply font-primary text-2xl font-medium md:text-4xl;
  }

  h3,
  .h3 {
    @apply font-primary text-xl font-medium md:text-3xl;
  }

  h4,
  .h4 {
    @apply font-primary text-lg font-medium md:text-2xl;
  }

  body,
  .p {
    @apply font-primary text-sm md:text-base;
  }
  /* #endregion  /**======== Typography =========== */

  .layout {
    /* 1100px */
    max-width: 68.75rem;
    @apply mx-auto w-11/12;
  }

  .bg-dark a.custom-link {
    @apply border-gray-200 hover:border-gray-200/0;
  }

  /* Class to adjust with sticky footer */
  .min-h-main {
    @apply min-h-[calc(100vh-56px)];
  }
}

@layer utilities {
  .animated-underline {
    background-image: linear-gradient(#33333300, #33333300),
      linear-gradient(
        to right,
        var(--color-primary-400),
        var(--color-primary-500)
      );
    background-size:
      100% 2px,
      0 2px;
    background-position:
      100% 100%,
      0 100%;
    background-repeat: no-repeat;
  }
  @media (prefers-reduced-motion: no-preference) {
    .animated-underline {
      transition: 0.3s ease;
      transition-property: background-size, color, background-color,
        border-color;
    }
  }
  .animated-underline:hover,
  .animated-underline:focus-visible {
    background-size:
      0 2px,
      100% 2px;
  }
}

